name:                pure-bloom
version:             0.8.0.0
homepage:            purehs.org/doc/pure-bloom
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-bloom.git

library
  build-depends:
    base,
    array,
    pure-json,
    pure-txt

  exposed-modules:
    Pure.Bloom
    Pure.Bloom.Scalable

  default-extensions:
    ScopedTypeVariables
    NamedFieldPuns
    ViewPatterns
    RecordWildCards
    OverloadedStrings
    BangPatterns
    BlockArguments

  hs-source-dirs: src

  default-language: Haskell2010
